@@ -1,0 +1,3 @@
+SUBDIRS = text mfc qt
+
+libcppunitincludedir = $(includedir)/cppunit/ui
