@@ -1,0 +1,4 @@
+libcppunitincludedir = $(includedir)/cppunit/ui/text
+
+libcppunitinclude_HEADERS = \
+	TestRunner.h
